--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,7 @@ repos:
     -   id: flake8
         additional_dependencies: [flake8-docstrings]
         exclude: docs
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.3.0  # Use the sha / tag you want to point at
+    hooks:
+    -   id: mypy
